--- a/SASS/src/scss/layout/_header.scss
+++ b/SASS/src/scss/layout/_header.scss
@@ -1,8 +1,10 @@
-.header {
-    background-color: $neutral-color-100;
+header {
+    color: $neutral-color-500;
     height: 8rem;
-    .logo {
-        font-family: $font-logo-title;
+    & .logo {
+        display: flex;
         justify-content: center;
+        font-size: 2.5rem;
+        font-family: $font-logo-title;
     }
 }
