--- a/SASS/src/scss/utils/_variables.scss
+++ b/SASS/src/scss/utils/_variables.scss
@@ -1,4 +1,4 @@
-$font-logo-title: Shrikhand;
+$font-logo-title: Shrikhand, OpenSans, Montserrat, Raleway;
 $font-stack: Roboto, sans-serif;
 $fa-font-path: "../webfonts";
 $primary-color: #9356DC;
