--- a/SASS/src/scss/menu1.scss
+++ b/SASS/src/scss/menu1.scss
@@ -4,35 +4,18 @@
 @import "scss/solid.scss";
 
 @import "./utils/variables";
-@import "./utils/mixins";
-@import "./utils/functions";
-@import "./layout/header";
+//@import "./utils/mixins";
+//@import "./utils/functions";
+@import "./layout/header-menu";
 @import "./layout/nav";
+@import "./layout/footer";
 
 
 * {
     box-sizing: border-box;
-    margin: 0;
+    margin: auto;
     padding: 0;
     font-family: Roboto, serif;
-}
-
-header {
-    color: $neutral-color-500;
-    display: flex;
-    align-items: baseline;
-    & .return-to-index {
-        margin: 0.5rem 1rem;
-        & a {
-            text-decoration-line: none;
-            color: $neutral-color-500;
-        }
-    }
-    & .logo {
-        margin: 0.5rem auto;
-        font-size: 2.5rem;
-        font-family: Shrikhand;
-    }
 }
 
 section {
@@ -41,22 +24,18 @@ section {
     flex-direction: column;
     justify-content: center;
     & .image {
-        background-image: url("../../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        height: 20rem;
-        z-index: -1;
+        height: 8em;
+        width: 100%;
+        object-fit: cover;
     }
     & .menu {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        position: relative;
+        position: sticky;
         padding: 1rem 1rem;
-        margin-top: -25px;
+        margin-top: -50px;
         border-radius: 5rem 5rem 0 0;
-        transform: translateY(-5%);
         & h2 {
             font-family: Shrikhand;
             margin: 1rem 1rem;
@@ -90,7 +69,6 @@ section {
                     margin: 0 0 0 auto;
                 }
             }
-        }
         & button {
             color: $neutral-color-100;
             background-image: linear-gradient($secondary-color, $primary-color);
@@ -106,21 +84,45 @@ section {
             }
         }
     }
+    }
+}
+.menu .starter {
+    animation: apparition 3s backwards 2s 1;
+}
+.menu .main-course {
+    animation: apparition 3s backwards 5s 1;
+}
+.menu .dessert {
+    animation: apparition 3s backwards 7s 1;
+}
+@keyframes apparition {
+    from {
+        bottom: 400px;
+        opacity: 0;
+    }
+    to {
+        bottom: 100px;
+        opacity: 1;
+    }
+}
+.text_info, .text_choose {
+    align-items: baseline;
 }
 
 .text_choose {
-    display: none;
-    width: 5rem;
-    height: 5rem;
+    width: 1rem;
+    height: 1rem;
     position: relative;
     background-color:$tertiary-color;
+    transition: transform 1s ease 0.2s;
     & :hover {
-        display: flex-end;
-        animation: apparition 3s;
+        display: inline-block;
+        transform: translateX(100px);
+        /*animation: checkbox-appear 3s;*/
     }
 }
 
-@keyframes apparition {
+/*@keyframes checkbox-appear {
     0% {
         right: 0px;
         transform: scale(0);
@@ -136,32 +138,12 @@ section {
         transform : scale(1);
         background-color:$tertiary-color;
     }
-}
+}*/
 
 .precision, .price {
     display: flex;
-
 }
+
 .title, .price {
     font-weight: 700;
-}
-
-footer {
-    background: $neutral-color-500;
-    color: $neutral-color-100;
-    padding: 1rem 1rem;
-    & .logo {
-        color: $neutral-color-100;
-        font-size: 1rem;
-        font-family: Shrikhand;
-        line-height: 2.5;
-    }
-    & ul li  {
-        list-style: none;
-        line-height: 1.5;
-        & a {
-            text-decoration-line: none;
-            color: $neutral-color-100;
-        }
-    }
 }
