--- a/public/css/menu1.css
+++ b/public/css/menu1.css
@@ -6085,22 +6085,6 @@ readers do not read off random characters that represent icons */
   font-weight: 900;
 }
 
-.header {
-  background-color: #fff;
-  height: 8rem;
-}
-.header .logo {
-  font-family: Shrikhand;
-  justify-content: center;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Roboto, serif;
-}
-
 header {
   color: #000;
   display: flex;
@@ -6119,6 +6103,33 @@ header .logo {
   font-family: Shrikhand;
 }
 
+footer {
+  background: #000;
+  color: #fff;
+  padding: 1rem 1rem;
+}
+footer .logo {
+  color: #fff;
+  font-size: 1rem;
+  font-family: Shrikhand, OpenSans, Montserrat, Raleway;
+  line-height: 2.5;
+}
+footer ul li {
+  list-style: none;
+  line-height: 1.5;
+}
+footer ul li a {
+  text-decoration-line: none;
+  color: #fff;
+}
+
+* {
+  box-sizing: border-box;
+  margin: auto;
+  padding: 0;
+  font-family: Roboto, serif;
+}
+
 section {
   background-color: rgba(242, 240, 240, 0.7882352941);
   display: flex;
@@ -6126,22 +6137,18 @@ section {
   justify-content: center;
 }
 section .image {
-  background-image: url("../../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 20rem;
-  z-index: -1;
+  height: 8em;
+  width: 100%;
+  object-fit: cover;
 }
 section .menu {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: relative;
+  position: sticky;
   padding: 1rem 1rem;
-  margin-top: -25px;
+  margin-top: -50px;
   border-radius: 5rem 5rem 0 0;
-  transform: translateY(-5%);
 }
 section .menu h2 {
   font-family: Shrikhand;
@@ -6177,7 +6184,7 @@ section .menu .starter .details .precision, section .menu .main-course .details 
 section .menu .starter .details .price, section .menu .main-course .details .price, section .menu .dessert .details .price {
   margin: 0 0 0 auto;
 }
-section .menu button {
+section .menu .starter button, section .menu .main-course button, section .menu .dessert button {
   color: #fff;
   background-image: linear-gradient(#FF79DA, #9356DC);
   border-radius: 5rem;
@@ -6188,66 +6195,73 @@ section .menu button {
   margin: 1.5rem auto;
   box-shadow: 0.3rem 0.3rem 0.15rem #d3d3d3;
 }
-section .menu button :hover {
+section .menu .starter button :hover, section .menu .main-course button :hover, section .menu .dessert button :hover {
   cursor: pointer;
   /*à revoir*/
 }
 
-.text_choose {
-  display: none;
-  width: 5rem;
-  height: 5rem;
-  position: relative;
-  background-color: #99E2D0;
+.menu .starter {
+  animation: apparition 3s backwards 2s 1;
 }
-.text_choose :hover {
-  display: flex-end;
-  animation: apparition 3s;
+
+.menu .main-course {
+  animation: apparition 3s backwards 5s 1;
+}
+
+.menu .dessert {
+  animation: apparition 3s backwards 7s 1;
 }
 
 @keyframes apparition {
-  0% {
-    right: 0px;
-    transform: scale(0);
-    background-color: #fff;
+  from {
+    bottom: 400px;
+    opacity: 0;
   }
-  50% {
-    right: 5px;
-    transform: scale(0.5);
-    background-color: #99E2D0;
-  }
-  100% {
-    right: 10px;
-    transform: scale(1);
-    background-color: #99E2D0;
+  to {
+    bottom: 100px;
+    opacity: 1;
   }
 }
+.text_info, .text_choose {
+  align-items: baseline;
+}
+
+.text_choose {
+  width: 1rem;
+  height: 1rem;
+  position: relative;
+  background-color: #99E2D0;
+  transition: transform 1s ease 0.2s;
+}
+.text_choose :hover {
+  display: inline-block;
+  transform: translateX(100px);
+  /*animation: checkbox-appear 3s;*/
+}
+
+/*@keyframes checkbox-appear {
+    0% {
+        right: 0px;
+        transform: scale(0);
+        background-color: $neutral-color-100;
+    }
+    50% {
+        right: 5px;
+        transform: scale(0.5);
+        background-color:$tertiary-color;
+    }
+    100% {
+        right: 10px;
+        transform : scale(1);
+        background-color:$tertiary-color;
+    }
+}*/
 .precision, .price {
   display: flex;
 }
 
 .title, .price {
   font-weight: 700;
-}
-
-footer {
-  background: #000;
-  color: #fff;
-  padding: 1rem 1rem;
-}
-footer .logo {
-  color: #fff;
-  font-size: 1rem;
-  font-family: Shrikhand;
-  line-height: 2.5;
-}
-footer ul li {
-  list-style: none;
-  line-height: 1.5;
-}
-footer ul li a {
-  text-decoration-line: none;
-  color: #fff;
 }
 
 /*# sourceMappingURL=menu1.css.map */
