--- a/SASS/src/scss/layout/_footer.scss
+++ b/SASS/src/scss/layout/_footer.scss
@@ -2,19 +2,64 @@
 footer {
     background: $neutral-color-500;
     color: $neutral-color-100;
-    padding: 1rem 1rem;
+    padding: 1em 2em 1em 2em;
     & .logo {
         color: $neutral-color-100;
-        font-size: 1rem;
+        font-size: 1em;
         font-family: $font-logo-title;
         line-height: 2.5;
     }
     & ul li  {
         list-style: none;
         line-height: 1.5;
+        & i {
+            margin-right: 0.5em;
+        }
         & a {
             text-decoration-line: none;
             color: $neutral-color-100;
         }
     }
+}
+
+@media screen and (min-width: 1001px) {
+    footer {
+        & .logo {
+            display: flex;
+            justify-content: center;
+        }
+        & ul {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            width: 50em;
+            & li {
+            margin-right: 3em;
+            display: flex;
+            align-items: center;
+                & i {
+                    margin-right: 1em;
+                }
+            }
+        }
+    }
+    }
+@media screen and (min-width: 1001px) {
+footer {
+    & .logo {
+        display: flex;
+        justify-content: center;
+    }
+    & ul {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    & ul li {
+        margin-right: 3em;
+        display: flex;
+    }
+}
 }
