--- a/SASS/src/scss/main.scss
+++ b/SASS/src/scss/main.scss
@@ -9,6 +9,32 @@
 @import "./layout/nav";
 @import "./layout/footer";
 
+
+//Animation : coeur qui se remplit
+.heart {
+    width: 1.5em;
+    padding: 0.2em 0.2em;
+    & path {
+        fill: transparent;
+        stroke-width: 30;
+        stroke: $primary-color;//linear-gradient ($primary-color, $secondary-color);
+    }
+}
+.heart:hover path {
+    animation: animate-heart 2s linear forwards;
+    transition: 0.1s ease 0s;
+}
+
+@keyframes animate-heart {
+    0% {
+        fill: transparent;
+    }
+    100% {
+        fill: $primary-color; //linear-gradient($primary-color, $secondary-color);
+    }
+}
+
+// Précisions générales
 * {
     box-sizing: border-box;
     margin: 0;
@@ -18,8 +44,8 @@
 
 span, p {
     font-weight: normal;
-    font-size: 16px;
-    padding: 0.5rem 0.5rem;
+    font-size: 1em;
+    padding: 0.5em 0.5em;
     line-height: 1;
 }
 
@@ -28,6 +54,7 @@ body {
     color: $neutral-color-500;
 }
 
+//Animation : spinloader
 .spinner {
     color: $primary-color;
     position: absolute;
@@ -47,11 +74,6 @@ body {
     }
 }
 
-.contenu {
-    animation: apparition 1s 2s forwards;
-    opacity: 0;
-}
-
 @keyframes disappearance {
     from {
         opacity: 1;
@@ -59,6 +81,11 @@ body {
     to {
         opacity: 0;
     }
+}
+
+.contenu {
+    animation: apparition 1s 2s forwards;
+    opacity: 0;
 }
 
 @keyframes apparition {
@@ -70,21 +97,23 @@ body {
     }
 }
 
+
+//Section "Réservation"
 .reservation {
     background-color: $neutral-color-200;
-    margin: 0.5rem 0rem;
+    margin: 0.5em 0em;
     & h2 {
         display: flex;
         justify-content: center;
         line-height: 1;
     }
     & .location {
-        padding: 0.5rem 0.5em;
+        padding: 0.5em 0.5em;
         background-color: $neutral-color-300;
         display: flex;
         justify-content: center;
-        border-top: 0.1rem solid $neutral-color-400;
-        box-shadow: 1.5rem 2rem 2rem 0.5rem $neutral-color-300; /*chiffres à revoir*/
+        border-top: 0.1em solid $neutral-color-400;
+        box-shadow: 1.5em 2em 2em 0.5em $neutral-color-300; /*chiffres à revoir*/
         & input {
             background-color: $neutral-color-300;
             border: none;
@@ -92,59 +121,61 @@ body {
     }
     & .select_menu {
         background-color: $neutral-color-200;
-        padding: 1.5rem 1.5rem;
+        padding: 1.5em 1.5em;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         & button {
+            width: 60%;
             color: $neutral-color-100;
             background-image: linear-gradient($secondary-color, $primary-color);
-            border-radius: 5rem;  
-            padding: 0.8rem 0.8rem;
-            width: 50%;
+            border-radius: 5em;  
+            padding: 0.8em 0.8em;
             display: flex;
             justify-content: center;
-            box-shadow: 0.3rem 0.3rem 0.15rem $neutral-color-300;
+            box-shadow: 0.3em 0.3em 0.15em $neutral-color-300;
+            cursor: pointer;
         }
     }
 }
 
+//Section englobante "Fonctionnement-Restaurants"
 .functioning_restaurants {
     display: flex;
     flex-direction: column;
     width: 100%;
     .functioning {
-        margin-top: 2rem;
-        margin-left: 2rem;
-        padding: 0.8rem 0.8rem;
+        margin-top: 2em;
+        margin-left: 2em;
+        padding: 0.8em 0.8em;
         display: flex;
         flex-direction: column;
         justify-content: center;
         width: 100%;
         & h3 {
             line-height: 1;
-            margin-bottom: 1rem;
+            margin-bottom: 1em;
         }
         & div {
             background-color: $neutral-color-200;
-            border-radius: 2rem;
-            padding: 1rem 1rem;
-            margin-bottom: 1rem;
-            width: 75%;
-            box-shadow: 0.3rem 0.3rem 0.15rem $neutral-color-300;
+            border-radius: 2em;
+            padding: 1em 1em;
+            margin-bottom: 1em;
+            width: 90%;
+            box-shadow: 0.3em 0.3em 0.15em $neutral-color-300;
             align-items: baseline;
             & .number {
                 border-radius: 50%;
-                border: 0.5rem solid $primary-color;
+                border: 0.5em solid $primary-color;
                 background-color: $primary-color;
                 color: $neutral-color-100;
-                font-size: 0.8rem;
-                padding: 0.02rem 0.2rem;
-                margin: 0 1.5rem 0 -1.5rem;
+                font-size: 0.8em;
+                padding: 0.02em 0.2em;
+                margin: 0 1.5em 0 -1.5em;
             }
             & i {
-                padding: 0 0.7rem 0 0;
+                padding: 0 0.7em 0 0;
             }
         }
         & div:hover {
@@ -155,77 +186,121 @@ body {
         }
     }
     .restaurants {
-        margin-top: 2rem;
-        padding: 0.8rem 0.8rem;
-        line-height: 1.5rem;
+        margin-top: 2em;
+        padding: 0.8em 0.8em;
+        line-height: 1.5em;
         background-color: $neutral-color-200;
         width: 100%;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         & h3 {
             display: flex;
-            justify-content: left; /*ne fonctionne pas*/
-            margin-bottom: 1rem;
+            margin-bottom: 1em;
         }
         & .cards {
             display: flex;
             flex-direction: column;
             justify-content: center;
-            border-radius: 2rem;
-            width: 80%;
+            border-radius: 2em;
+            width: 100%;
+            & .all_elements {
+                margin: auto auto; //ajout
+            }
             & .element {
-                width: 100%;
-                justify-content: center;
-                align-items: center;
+                //width: 80%;
+                width: 25em;
                 background-color: $neutral-color-100;
-                border-radius: 1.5rem;
-                height: 15rem;
-                margin: 1rem 1rem;
-                box-shadow: 0.3rem 0.3rem 0.15rem $neutral-color-300;
-                & .palette-du-gout {
-                    background-image: url("../../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-                    height: 170px;
-                    border-top-right-radius: 1.5rem;
-                    border-top-left-radius: 1.5rem;
+                border-radius: 1.5em;
+                height: 20em;
+                margin: 1em 1em 2em 1em; //ajout
+                box-shadow: 0.3em 0.3em 0.15em $neutral-color-300;
+                & a {
+                    text-decoration: none;
+                    color: $neutral-color-500;
+                }            
+                & .palette-du-gout, & .note-enchantee, & .a-la-francaise, & .delice-des-sens {
+                    height: 15em;
+                    border-top-right-radius: 1.5em;
+                    border-top-left-radius: 1.5em;
+                    background-size: cover;
+                    background-position: center;
                 }
-                & img {
-                    border-radius: 1.5rem 1.5rem 0 0;
-                    object-fit: cover;
-                    height: 10rem;
-                    width: 100%;
+                & .palette-du-gout {
+                    background-image: url("../../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");   
+                }
+                & .note-enchantee {
+                    background-image: url("../../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
+                }
+                & .a-la-francaise {
+                    background-image: url("../../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+                }
+                & .delice-des-sens {
+                    background-image: url("../../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
                 }
                 & .nouveau1, & .nouveau2 {
                     color: darken($tertiary-color, 35%);
                     background-color: $tertiary-color;
-                    border-radius: 0.5rem;
-                }
-                & .nouveau1 {
+                    border-radius: 0.5em;
+                    width: 20%;
+                    padding-left: 0.5em;
+                    padding-right: 0.5em;
+                    height: 1.5em;
                     position: relative;
-                    top: 672px;
-                    right: 96px; /*sort de l'image quand la taille de l'écran augmente*/
-                }
-                & .nouveau2 {
-                    position: relative;
-                    top: 575px;
-                    right: -370px; /*idem*/
+                    top: 14px;
+                    right: -296px;
                 }
                 & .description {
-                    border-radius: 0 0 1.5rem 1.5rem;
-                    height: 5rem;
+                    border-radius: 0 0 1.5em 1.5em;
+                    height: 5em;
                     width: 100%;
                     display: flex;
                     flex-direction: row;
                     justify-content: space-between;
-                    padding: 0rem 1rem;
+                    padding: 0em 1em;
                     & .text {
                         line-height: 0.5;
                             & .title {
                                 font-weight: 700;
-                                & a {
-                                    text-decoration-line: none;
-                                    color: $neutral-color-500;
-                                }
                             }
+                        }
+                    }
+            }
+        }
+}
+
+//Design adapté aux différentes tailles d'écran
+@media screen and (min-width: 601px) and (max-width: 1000px) {
+    .reservation {
+        & .select_menu {
+            & button {
+                width: 50%;
+            } 
+        }
+    }
+    .functioning_restaurants {
+        display: flex;
+        flex-direction: row;
+        & .functioning {
+            width: 40%;
+            .number1, .number2, .number3 {
+                align-items: baseline;
+                margin-right: auto;
+            }
+        }
+        & .restaurants {
+            width: 60%;
+            .all_elements {
+                display: flex;
+                flex-direction: row;
+                width: 100%;
+                flex-wrap: wrap;
+                margin: auto;
+                .element {
+                    width: 30%;
+                    .nouveau1, .nouveau2 {
+                        width: 42%;
+                        right: -325px; //n'est pas pris en compte par le navigateur
                     }
                 }
             }
@@ -233,42 +308,45 @@ body {
     }
 }
 
-//responsive
-@media screen and (min-width: 601px) and (max-width: 1000px) {
-    .functioning_restaurants {
-        display: flex;
-        flex-direction: column;
-        & .restaurants {
-            display: flex;
-            flex-direction: column;
-            & h3 + div {
-                align-items: baseline;
+@media screen and (min-width: 1001px) {
+    .reservation {
+        & .select_menu {
+            & button {
+                width: 40%;
             }
         }
     }
-}
-
-@media screen and (min-width: 1001px) {
     .functioning_restaurants {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         & .functioning {
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
+            width: 40%;
+            & h3 {
+                margin-right: 2em;
+            }
             & div {
-                width: 40%;
-                margin-right: 3rem;
+                display: flex;
+                flex-direction: column;
+                //width: 80%;
+                //margin-right: 3em;
             }
         }
         & .restaurants {
             display: flex;
-            & .cards {
-                width: 50%;
+            width: 60%;
+            & .all_elements {
+                display: flex;
                 flex-direction: row;
                 & .element {
-                    width: 40%;
+                    width: 50%;
+                    padding-bottom: 0.2em;
+                    .nouveau1, .nouveau2 {
+                        width: 44%;
+                    }
                 }
             }
         }
     }
-}
+}}
